#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

DG-2009-12-01-0: Cleanup:    Added additional parameter to get_qstat_j_info
                 Review:     CR

CR-2009-11-30-0: Bugfix:     usage test: fixed job output parsing problem which
                               leads to lost job output messages.
                 Review:     SH

CR-2009-11-25-1: Bugfix:     tight_integration test reported error for qmaster 
                             message logging for killed tightly parallel task
                             in master_killed scenario which is not an error.
                 Review:     DG

TB-2009-11-25-0: Enhancem.:  o enhanced SDM components/executor/reload test
                               for issue 694
                             o enhanced create_bundle_string function to work
                               with parameters with formatting info (like
                               {0,number,integer}) in bundle strings
                 Review:     RH

CR-2009-11-25-0: Bugfix:     Fixed problems in master task job for tight
                             integration tests. The master task not always 
                             finished after the slave tasks have finished.
                 Review:     SH

SH-2009-11-25-0: Belongs to: SH-2009-11-20-0
                             This test is only applicable to GE62

CR-2009-11-24-0: Enhancem.:  new test for issue 3185
                 Review:     SH

CR-2009-11-23-0: Adjustment: o fixed shadowd_migrate test to support delayed 
                               reporting period of execds for qsub -sync jobs
                 Review:     SH
