@@ -7,6 +7,9 @@
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
 
+CR-2009-12-02-0: Enhancem.:  Added new test for qrsh: extensive_qrsh
+                 Review:     MD
+
 DG-2009-12-01-0: Cleanup:    Added additional parameter to get_qstat_j_info
                  Review:     CR
 
